# test_auth

./: pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  user.py
app/routes/: __init__.py  auth.py  protected.py
app/services/: auth_service.py
